--- a/broncode/simulator/vercel.json
+++ b/broncode/simulator/vercel.json
@@ -2,7 +2,8 @@
     "version": 2,
     "builds": [
 		{ "src": "static/*.*", "use": "@vercel/static" },
-		{ "src": "*.py", "use": "@vercel/python" }
+		{ "src": "*.*", "use": "@vercel/static" },
+		{ "src": "index.py", "use": "@vercel/python" }
     ],
     "routes": [
         {
