Parametervervanging bij uitlevering ipv at runtime

--- a/broncode/uitleveren/.gitignore
+++ b/broncode/uitleveren/.gitignore
@@ -1,2 +1,4 @@
 # Deze moet niet in de repo staan, zodat die blijft staan bij het switchen van branches.
 publiceer_git.bat
+# De wiki directory wordt gebruikt voor een andere git repo
+wiki
