--- a/broncode/uitleveren/configuratie.json
+++ b/broncode/uitleveren/configuratie.json
@@ -1,5 +1,8 @@
 {
-  "STOP_Documentatie_Url": "https://koop.gitlab.io/STOP/voorinzage/standaard-preview-b/",
-  "STOP_Repository_Url": "https://gitlab.com/koop/STOP/voorinzage/standaard-preview-b/-/tree/master/",
-  "STOP_Voorbeelden_Url": "https://gitlab.com/koop/STOP/voorinzage/standaard-preview-b/-/tree/master/voorbeelden"
+    "Simulator_Online_Url": "https://versiebeheer-simulator.vercel.app/",
+    "STOP_Documentatie_Url": "https://koop.gitlab.io/STOP/voorinzage/standaard-preview-b/",
+    "STOP_Voorbeelden_Url": "https://gitlab.com/koop/STOP/voorinzage/standaard-preview-b/-/tree/master/voorbeelden",
+    "STOPwerk_Github_user": "STOPwerk",
+    "STOPwerk_Github_email": "frank.robijn@koop.overheid.nl",
+    "VERSIE": "2022-11-12 21:52:21"
 }
